--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,6 @@
 
+#Database
+
+spring.datasource.url = jdbc:postgresql://localhost:5432/gameCar
+spring.datasource.username =postgres
+spring.datasource.password = admin
